--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "frontend-sample-app": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
