--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "frontend-sample-app": "file:",
+    "lucide-react": "^0.456.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
